--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gulp-plumber": "^1.2.1"
+  },
   "devDependencies": {
-    "del": "^5.0.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-ejs": "^4.1.1",
-    "gulp-plumber": "^1.2.1",
+    "gulp-ejs": "^5.1.0",
     "gulp-pretty-html": "^2.0.10",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-watch": "^5.0.1",
     "gulp-webserver": "^0.9.1",
+    "plumber": "^0.4.8",
     "run-sequence": "^2.2.1"
   },
   "scripts": {
